# aimanager

./: .gitignore  AGENTBOX_PRODUCTIONIZATION_SPRINT_V1.md  Caddyfile  Dockerfile  README.md  RELEASE_GATE.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.deploy/: id_ed25519  id_ed25519.pub
alembic/: env.py
alembic/versions/: c6a7d8e9f0a1_create_tenants_agents_conversations_messages.py
nginx/: nginx.conf
ops/: CANARY_ROLLBACK_RUNBOOK.md  POSTMORTEM_TEMPLATE.md  RELIABILITY_AUTOMATION.md  WEEKLY_RELIABILITY_REVIEW_TEMPLATE.md
scripts/: build_runtime_config.py  deploy.sh  install_reliability_cron.sh  regression_matrix.py  release_gate.sh  reliability_cycle.py  reliability_report.py
src/: cli.py  config.py  db.py  main.py
src/channels/: __init__.py  base.py  telegram.py  umnico.py
src/core/: action_parser.py  brain.py  config_loader.py  config_schema.py  contracts.py  crud.py  intent_lock.py  intent_router.py  pipeline.py  postprocess.py  (+5 more)
tests/: test_action_parser.py  test_agents_create_autotenant.py  test_brain.py  test_channel_base.py  test_cli.py  test_config_loader.py  test_config_schema.py  test_contracts.py  test_golden.py  test_google_calendar.py  test_google_sheets.py  test_health.py  test_intent_lock.py  test_intent_router.py  test_jone_config.py  test_pipeline.py  test_pipeline_integration.py  test_poller.py  test_postprocess.py  test_runtime_config_builder.py  test_secrets.py  test_state_contract.py  test_telegram_adapter.py  test_umnico_adapter.py
web/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
(+63 files in other folders)
